# md2pdf

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  Makefile  README.md  main.py  pdf_generator.py  pyproject.toml  setup.py  test.md  test_emoji.md  todo.md
.claude/: settings.local.json
docs/: development-patterns.md  implementation-details.md
docs/features/: README.md  prd-page-headers-footers-summary.md  prd-page-headers-footers.md  prd-settings-presets-summary.md  prd-settings-presets.md  prd-standalone-html-export-summary.md  prd-standalone-html-export.md
templates/: index.html  preview.html  theme_preview.html
